# Mini-projet-Cpp

./: .gitignore  README.md
Code/: CMakeLists.txt
Code/mainLauncher/: CMakeLists.txt
Code/resources/: EnnemiTile.tsx  GoalTile.tsx  OmbreTile.tsx  PickUpTile.tsx  Salle.xml  Salle0 - Copie.xml  Salle0.tmx  Salle0.xml  Salle1.tmx  Salle1.xml  Salle2.tmx  Salle2.xml  Salle3.tmx  Salle3.xml  Salle4.tmx  Salle4.xml  Salle5.tmx  Salle5.xml  Salle6.tmx  Salle6.xml  Salle7.tmx  Salle7.xml  StaticTile.tsx
Code/resources/Old Salles/: Salle1.xml
Code/src/: CMakeLists.txt  Clef.cpp  Clef.h  CollisionCallBack.cpp  CollisionCallBack.h  CoteEnnemi.cpp  CoteEnnemi.h  CoteEnnemi_Hurt.cpp  CoteEnnemi_Hurt.h  CoteEnnemi_Kill.cpp  CoteEnnemi_Kill.h  CoteEnnemi_Plateforme.cpp  CoteEnnemi_Plateforme.h  Dynamic.cpp  Dynamic.h  Ennemi.cpp  Ennemi.cpp.txt  Ennemi.h  Ennemi.h.txt  EnnemiDecorateur.cpp.txt  EnnemiDecorateur.h.txt  Joueur.cpp  Joueur.h  Ombre.cpp  Ombre.h  OmbreOld.cpp  OmbreOld.h  PickUp.cpp  PickUp.h  Piece.cpp  Piece.h  Porte.cpp  Porte.h  SceneManager.cpp  SceneManager.h  Static.cpp  Static.h  Unite.cpp  Unite.h  UnitePhysic.cpp  (+5 more)
Code/unitTests/: unitTests.cpp
Elements Graphiques/: BackgdSource.jfif  SpriteCpp.xcf
Preparation/: Cahier_des_charges.docx  Diagram 2020-06-02 17-22-19.uxf
